objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AAkPay__Address_Id__c</fullName>
        <inlineHelpText>Mailing Address provider/validator&apos;s Id for this address.</inlineHelpText>
        <label>Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Address_Update__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AAkPay__ContactAddressL?id=&quot;&amp;Id, &quot;Address Update&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Barcode_Number__c</fullName>
        <description>Generation of Barcode number requires access to appropriate Address Validation Software / license with AAkonsult Payments</description>
        <inlineHelpText>Numeric version of the Australia Post 4-state barcode.  One digit is returned for each bar of the barcode. Barcode font required for printing.</inlineHelpText>
        <label>Barcode Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Biller_Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Code used for Import File Matching.  
For organisations importing BPAY records, this is the Contact BPAY code.</inlineHelpText>
        <label>Biller Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Create_URL_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this to create a URL Token.  URL Tokens are useful when requesting payments using a public facing web link.
Activate/Use workflow rules to set this automatically.</inlineHelpText>
        <label>Create URL Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Current_Member_Subscriber_Status__c</fullName>
        <formula>IF(ISBLANK(AAkPay__Membership_Subscription_Group_End_Date__c  ),
&quot;&quot;,
  IF( AAkPay__Membership_Subscription_Group_End_Date__c  &gt;= TODAY(),
      IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AFO&quot;, &quot;Current&quot;,24,24),
      IF(AAkPay__Membership_Subscription_Group_End_Date__c  &gt;= (TODAY() - 15),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AFJ&quot;, &quot;Recently Expired&quot;,24,24),
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015A00000033AF9&quot;, &quot;Expired&quot;,24,24)
       )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Member/Subscriber Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Current_Member__c</fullName>
        <formula>IF( OR( AAkPay__Subscription_Group_End_Date__c &gt;= TODAY(),AAkPay__Membership_End_Date__c &gt;= TODAY()),&quot;YES&quot;,&quot;NO&quot;)</formula>
        <label>Current Member/Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Data_Validated__c</fullName>
        <inlineHelpText>Fields that have been validated through the Data Validation Tool.
Data validation of DPID must be included in order for this to be updated.</inlineHelpText>
        <label>Data Validated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>MobilePhone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>BSB</fullName>
                </value>
                <value>
                    <fullName>MailingAddress</fullName>
                </value>
                <value>
                    <fullName>OtherAddress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Delivery_Point_Id__c</fullName>
        <inlineHelpText>Mailing address - postal delivery point id (DPID)</inlineHelpText>
        <label>Delivery Point Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Fundraiser_ID__c</fullName>
        <inlineHelpText>Fundraiser ID is currently only used in the Import File routines.  Please use the Membership Id or Biller Code it as these fields are indexed and can be searched upon.</inlineHelpText>
        <label>Fundraiser ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Geocoding_Accuracy__c</fullName>
        <description>Location Precision for PbsSpectrum:
http://kleberwebsite.datatoolscloud.net.au/kleberbrowser/KleberMethodFieldOptions.aspx?Method=DataTools.Enhance.Address.Geocoding.PbsSpectrum.Au.Append&amp;ResultField=LocationPrecision&amp;Description=A%20code%20describing%20the%20precision%20of%20the%20geocode.&amp;pt=</description>
        <inlineHelpText>Displays the accuracy of the geocoding results</inlineHelpText>
        <label>Geocoding Accuracy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Last_Generated_Statement_Amount__c</fullName>
        <label>Last Generated Statement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AAkPay__Last_Generated_Statement_Id__c</fullName>
        <inlineHelpText>Salesforce record Id of the last statement generated.  Used for Visualforce Template to mail out statement.</inlineHelpText>
        <label>Last Generated Statement Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Member_Type__c</fullName>
        <description>If updating this, also ensure Payment Options (Member Type 1,2,3) and Payment Items (Member Type) is also updated.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Membership_End_Date__c</fullName>
        <label>Membership/Subscription End Date</label>
        <summarizedField>AAkPay__Subscription__c.AAkPay__End_Date__c</summarizedField>
        <summaryForeignKey>AAkPay__Subscription__c.AAkPay__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AAkPay__Membership_No__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Membership No&apos;s are automatically assigned the first time a payment is made.</inlineHelpText>
        <label>Membership No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Membership_Subscription_Group_End_Date__c</fullName>
        <formula>IF(OR(AAkPay__Subscription_Group_End_Date__c &gt;  AAkPay__Membership_End_Date__c,ISBLANK(AAkPay__Membership_End_Date__c))  ,AAkPay__Subscription_Group_End_Date__c, AAkPay__Membership_End_Date__c )</formula>
        <inlineHelpText>Is the larger of the subscriber group end date or the membership/subscriber end date.  This is useful when a member/subscriber was an individual an now has a family (subscriber group) type membership.</inlineHelpText>
        <label>Membership/Subscription Group End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AAkPay__MobilePhone_Search__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(MobilePhone, &apos;.&apos;, &apos;&apos;)  , &apos; &apos;, &apos;&apos;)  , &apos;-&apos;, &apos;&apos;)  , &apos;)&apos;, &apos;&apos;)  , &apos;(&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Other_Address_Id__c</fullName>
        <inlineHelpText>Other Address provider/validator&apos;s Id for this address.</inlineHelpText>
        <label>Other Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Other_Address_Update__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AAkPay__ContactOtherAddressL?id=&quot;&amp;Id, &quot;Address Update&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Other_Delivery_Point_Id__c</fullName>
        <inlineHelpText>Other address - postal delivery point id (DPID)</inlineHelpText>
        <label>Other Delivery Point Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Phone_Search__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &apos;.&apos;, &apos;&apos;)  , &apos; &apos;, &apos;&apos;)  , &apos;-&apos;, &apos;&apos;)  , &apos;)&apos;, &apos;&apos;)  , &apos;(&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The primary contact of this household/subscriber group for mail outs, email notifications, renewal notices and other important communications.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Print_Email_Receipt__c</fullName>
        <inlineHelpText>System maintained Email address.  Contains the default Merchant Facility Print Email Receipt value if the contact does not have an email address on file.  This field is used by notifications and time based workflow events.</inlineHelpText>
        <label>Print Email Receipt</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AAkPay__Show_Mailing_Address_on_Map__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/?q=&quot;&amp;TEXT(MailingLatitude)&amp;&quot;,&quot;&amp;TEXT(MailingLongitude) , TRIM(MailingStreet&amp;&quot; &quot;&amp;MailingCity&amp;&quot; &quot;&amp;MailingState&amp;&quot; &quot;&amp;MailingPostalCode&amp;&quot; &quot;&amp;MailingCountry)  ,&quot;_Blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows address on map using by using the geocoded coordinates.</inlineHelpText>
        <label>Show Mailing Address on Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Show_Other_Address_on_Map__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/?q=&quot;&amp;TEXT(OtherLatitude)&amp;&quot;,&quot;&amp;TEXT(OtherLongitude) , TRIM(OtherStreet&amp;&quot; &quot;&amp;OtherCity&amp;&quot; &quot;&amp;OtherState&amp;&quot; &quot;&amp;OtherPostalCode&amp;&quot; &quot;&amp;OtherCountry) ,&quot;_Blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Other Address on Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Subscriber_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber Group</label>
        <referenceTo>AAkPay__Subscriber_Group__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Subscription_Group_End_Date__c</fullName>
        <formula>AAkPay__Subscriber_Group__r.AAkPay__Subscription_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subscription Groups End date is the end date for the subscription group.  If this person is not the primary contact for the subscription group then this end date would only be shown.</inlineHelpText>
        <label>Subscription Group End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AAkPay__URL_Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>URL Token</label>
        <referenceTo>AAkPay__URL_Tokens__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AAkPay__Update_Geocode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked, the address will be geocoded if it is missing</inlineHelpText>
        <label>Update Geocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__Voter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person have voting rights at the AGM and other membership related events.</inlineHelpText>
        <label>Voter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__contactSectionAdditionalInfo__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__contactEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactSectionAdditionalInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__contactSectionAddress__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__contactEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactSectionAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__contactSectionDescription__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__contactEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactSectionDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__contactSectionInformation__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__contactEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactSectionInformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__contactSectionOther__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__contactEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>contactSectionOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_Lon__c</fullName>
        <label>Lat/Lon</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>